--- a/src/App.css
+++ b/src/App.css
@@ -40,13 +40,25 @@
   border-radius: 5px;
 }
 
-.validation {
+.no-way {
   height: 60px;
   margin-left: 250px;
   width: 120px;
   height: 80px;
   margin-top: 50px;
   background-color: red;
+  color: white;
+  border: lightgray solid 2px;
+  border-radius: 5px;
+}
+
+.go {
+  height: 60px;
+  margin-left: 250px;
+  width: 120px;
+  height: 80px;
+  margin-top: 50px;
+  background-color: greenyellow;
   color: white;
   border: lightgray solid 2px;
   border-radius: 5px;
